fix: editingAPI

--- a/kadoo/src/Pages/ProductPlantsPage/ProductPlantsPage.css
+++ b/kadoo/src/Pages/ProductPlantsPage/ProductPlantsPage.css
@@ -106,3 +106,20 @@
     background-color: rgb(156, 0, 0);
     transition: all 0.3s ease-in-out;
 }
+.row.center {
+    align-items: center;
+  }
+  .col-1 {
+    flex: 1;
+  }
+  .col-2 {
+    flex: 2;
+  }
+  button.add {
+    background-color: #40c0f0;
+    width: 1.5rem;
+  }
+  button.remove {
+    background-color: #f04040;
+    width: 1.5rem;
+  }
